Documented README and format code
